welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
 var b:Boolean =false
 if (!estFaceMur()) {
 	avance()
 	if (getCouleurSol==Color.green){b=true}
 	else {b=false}
 	recule()
 }

                              }  